# intent-classification-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
.devcontainer/: devcontainer.json  postCreate.sh
configs/: id.json
data/: data_parser.py  id.json
data/preprocess/: cache-714f8469b3239200.arrow  cache-a8070ad3e8e4320a.arrow  state.json
docker/: Dockerfile
sbin/: download_dataset.sh  install.sh
scripts/: download_dataset.sh
src/: model.py
src/data/: data_parser.py
