[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.20.0"
transformers = {extras = ["torch"], version = "^4.43.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
